fix overspill in profile page

--- a/python-project-starter/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/python-project-starter/react-app/src/components/ProfilePage/ProfilePage.css
@@ -1,7 +1,6 @@
 .profile-items {
     display: grid;
     grid-template-columns: 50% 50%;
-    column-gap: 25px;
 }
 
 .profile-recipes-container {
